--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Devam Dave, Hao Luo",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "babel-jest": "^29.7.0",
-    "chai": "^4.3.10",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^22.1.0",
-    "mocha": "^10.2.0"
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
